# rss-translation

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20240506082428_init.sql
src/: cache_provider.rs  feed_generator.rs  html_data.rs  lib.rs  main.rs  rss.rs  translate.rs
src/cache_provider/: provider.rs  s3.rs  sql.rs  webdav.rs
src/cache_provider/webdav/: client.rs
src/feed_generator/: atom_generator.rs  feed_generator.rs  rss_generator.rs
