[package]
name = "rss-trans"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
atom_syndication = "0.12.2"
aws-config = {version="1", features = ["behavior-version-latest"] }
aws-credential-types = "1.1.5"
aws-sdk-s3 = {version="1", features = ["behavior-version-latest"] }
aws-smithy-types = "1.1.5"
aws-types = "1.1.5"
base64 = "0.21.7"
bytes = "1.5.0"
feed-rs = "1.4.0"
jsonwebtoken = "9.2.0"
mime = "0.3.17"
reqwest = "0.11.24"
rss = "2.0.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
